--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 # TODO LIST
 
-[x] (A) Fonction de distance entre deux sons +MCS_DTW @dtw
+[x] (A) Algorithme DTW (avec génération du chemin) +MCS_DTW @dtw
 [x] (C) Génération d'un jeu d'apprentissage +MCS_DTW @learningset
 [x] (D) Résolution du type d'un fichier audio (savoir quel est l'ordre) via le jeu d'apprentissage +MCS_DTW @learning
